# Crowd-Management

./: .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  README.zh-TW.md  TEST_REPORT.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  math-verification-freshness.yml
artifacts/maintenance/: perf_smoke_after.json  refactor_baseline.json
artifacts/math_verification/: counterexamples.json  implementation_comparison.json  numerical_results.json  provenance.json  summary.json  symbolic_results.json  test_report.json  test_results.csv
artifacts/performance/: baseline.json  baseline_desktop.json  comparison_desktop.json  profile.json  profile_desktop.json
configs/: ci_smoke.yaml  simple_room.yaml  static_crowd_capacity_shortfall.yaml  static_crowd_circle.yaml  static_crowd_ellipse.yaml  static_crowd_nonconvex.yaml  static_crowd_safety_infeasible.yaml  static_crowd_timeout.yaml  static_crowd_two_clusters.yaml  step1_g7.yaml
docs/: RESEARCH_SPEC.md  STEP1_FREEZE_AUDIT.md
docs/architecture/: refactor_baseline.md  refactor_plan.md  refactor_result.md
docs/math/: MATHEMATICAL_CLAIM_MATRIX.csv  MATHEMATICAL_CLAIM_MATRIX.md  MATHEMATICAL_VERIFICATION_REPORT.md
docs/performance/: baseline_report.md  final_report.md  implementation_plan.md  profile_report.md
legacy/evacuation_guidance/: README.md
reports/first_demo/: FIRST_DEMO_REPORT.md
reports/guidance_baselines_v1/: GUIDANCE_BASELINES_REPORT.md  baseline_metrics.json  metrics_comparison.csv  summary.json
reports/math_model_v1/: FORMULA_INVENTORY.md  MATH_MODEL_REPORT.md  PPT_OUTLINE.md  crowd_math_model_june26_revised.pptx  crowd_math_model_june26_revised_checklist.md  crowd_math_model_june26_revised_slide_notes.md
reports/stage4_density_eval_v1/: STAGE4_DENSITY_EVAL_REPORT.md  TEAMS_CHANNEL_REPORT.md  aggregate_metrics.csv  composite_scores.csv  stage4_key_findings.md
reports/step1_g6_compliance/: G6_COMPLIANCE_REPORT.md  ablation_aggregate.json  ablation_records.json  aggregate.json  evaluation_config.json  evaluation_snapshot.json  failure_gallery.json  gate_evidence.json  paired_comparisons.json  performance.json  preflight_evidence.json  records.csv  records.json  robustness_aggregate.json  robustness_records.json  stress_cases.json
reports/step1_g7/: COMMAND_LOG.md  G7_REPORT.md  POST_RUN_AUDIT.md  aggregate.json  evaluation_snapshot.json  failure_composition.json  freeze_manifest.json  g6_readonly_audit.json  g6_reference_snapshot.json  g6_tracking_comparator.json  gate_evidence.json  gate_status.json  media_evidence.json  noninferiority.json  paired_stats.json  readme_summary.json  resource_pareto.json  safety_comparison.json
reports/step1_pr6_evaluation/: PR6_EVALUATION_REPORT.md  aggregate.json  evaluation_config.json  evaluation_snapshot.json  failure_gallery.json  gate_evidence.json  paired_comparisons.json  records.csv  records.json
reports/visualization_package_v1/: VISUALIZATION_PACKAGE_REPORT.md
scripts/: _legacy_cli.py  benchmark_baseline.py  build_readme_media.py  build_step1_g7_media.py  check_math_verification_freshness.py  check_readme_consistency.py  compare_results.py  compare_wolfram_results.py  export_math_verification_cases.py  profile_step1.py  render_animation.py  render_dashboard.py  render_heatmap_snapshot.py  render_side_by_side.py  run_baseline.py  run_ci_smoke.py  run_density_dbact_experiment.py  run_guided.py  run_multi_seed_eval.py  run_stage4_density_eval.py  run_static_containment.py  run_step1_g6_compliance.py  run_step1_g7.py  run_step1_pr6_evaluation.py  run_visualization_package.py
src/crowd_management/: __init__.py  advanced_visualization.py  containment_metrics.py  containment_visualization.py  crowd_model.py  dbact_transfer.py  density_dbact.py  guidance_controller.py  guider_model.py  metrics.py  replay.py  types.py  visualization.py
tests/: test_config_and_types.py  test_controller.py  test_density_dbact.py  test_multi_seed_eval.py  test_simulation.py  test_stage4_density_eval.py  test_static_containment.py  test_visualization_package.py
tests/golden/: ci_smoke_expected.json
tests/regression/: test_result_schema.py  (+1 more)
wolfram/: common.wl  figures.wls  verify_main.wls
(+161 files in other folders)
