[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowd-management"
version = "0.1.0"
description = "Research simulator for adaptive guide-agent deployment around unknown crowds."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "shapely>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "imageio-ffmpeg>=0.5",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
